# pydantic-essentials

./: pydantic-essentials.code-workspace  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
