[tool.poetry]
name = "pydantic-essentials"
version = "0.1.0"
description = ""
authors = ["Christian Lemer <christian@lemer.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
jupyterlab = "^4.0.9"
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
requests = "^2.31.0"
datamodel-code-generator = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
